ignore visualvm error