@@ -27,7 +27,7 @@ repositories {
 
 application {
     mainClassName = "com.ecommerce.Application"
-    applicationDefaultJvmArgs = ["-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005"]
+    applicationDefaultJvmArgs = ["-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005","-Xverify:none"]
 }
 
 sourceCompatibility = 1.8
